优化agent批量文件传输功能